--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
             <li class="pages-items">
               <a href="./index.html" class="pages-items-link">トップページ</a>
             </li>
+            <li class="pages-items">
+              <a href="./assets/speech/index.html">100秒スピーチ</a>
+            </li>
+            <li class="pages-items">
+              <a href="./assets/birthday/index.html">誕生日</a>
+            </li>
+            <li class="pages-items">
+              <a href="./assets/event/index.html">リアルイベント</a>
+            </li>
           </ul>
         </nav>
         <div class="header-official">
