--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -34,6 +34,15 @@
             <li class="pages-items">
               <a href="../../index.html">トップページ</a>
             </li>
+            <li class="pages-items">
+              <a href="../speech/index.html">100秒スピーチ</a>
+            </li>
+            <li class="pages-items">
+              <a href="../birthday/index.html">誕生日</a>
+            </li>
+            <li class="pages-items">
+              <a href="../event/index.html">リアルイベント</a>
+            </li>
           </ul>
         </nav>
         <div class="header-official">
