--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -102,6 +102,7 @@
               </p>
               <p class="button" id="ribbonSwitch
               ">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
             </div>
           </div>
 
@@ -116,6 +117,7 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
             </div>
           </div>
 
@@ -130,6 +132,7 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
             </div>
           </div>
         </div>
@@ -149,6 +152,7 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
             </div>
           </div>
           <div class="speech-items">
@@ -162,6 +166,7 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
             </div>
           </div>
 
@@ -176,6 +181,7 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
             </div>
           </div>
         </div>
@@ -195,6 +201,7 @@
                   スピーチ内容記述
                 </p>
                 <p class="button">--もっと見る--</p>
+                <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
             </div>
           </div>
           <div class="speech-items">
@@ -208,6 +215,7 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
 
             </div>
           </div>
@@ -223,6 +231,7 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
+              <input type="checkbox" id="like"><label for="like"><svg class="speech-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
 
           </div>
         </div>
