レスポンシブ

--- a/assets/event/index.html
+++ b/assets/event/index.html
@@ -61,15 +61,16 @@
 
 <!-- main -->
   <main>
-    <div class="event-top-wapper">
-      <div  class="event-title">
-        <h1>最高の仲間✖️最高の時間</h1>
-        <h2>リアルイベント</h2>
+    <article class="main-wapper">
+      <div class="event-top-wapper">
+        <div  class="speech-title">
+          <h1 class="speech-titles-detail">最高の仲間×最高の時間</h1>
+          <h2 class="speech-titles">リアルイベント</h2>
+        </div>
+        <figure>
+          <img class="speech-top-img" src="../img/LINE_ALBUM_220904_2.jpg" alt="">
+        </figure>
       </div>
-      <figure>
-        <img class="event-top-img" src="../img/LINE_ALBUM_220904_2.jpg" alt="">
-      </figure>
-    </div>
   <!-- Vertical Timeline -->
     <section id="conference-timeline">
     <div class="timeline-start" id="timeline-start-year">2022</div>
