--- a/assets/event/index.html
+++ b/assets/event/index.html
@@ -80,7 +80,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left fade-l-1" id="content-img">
-            <p><span class="article-number"></span></p><img class="img-bbq" src="../img/LINE_ALBUM_220904.jpg" alt="">
+            <p><span class="article-number"></span></p><a href="https://line.me/ti/g/c0RFRJmXk6"><img class="img-bbq" src="../img/LINE_ALBUM_220904.jpg" alt=""></a>
           </div>
           <span class="timeline-author">
             <input type="checkbox" id="like"><label for="like"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
@@ -139,7 +139,7 @@
         </div>
         <div class="content-right-container fade-in-right">
           <div class="content-right" id="content-img">
-            <p><span class="article-number"></span></p><img class="img-kadachoki" src="../img/LINE_ALBUM_220904_1.jpg" alt="">
+            <p><span class="article-number"></span></p><a href="https://line.me/ti/g/c0RFRJmXk6"><img class="img-kadachoki" src="../img/LINE_ALBUM_220904_1.jpg" alt=""></a>
           </div>
           <span class="timeline-author">
             <input type="checkbox" id="like"><label for="like"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
@@ -156,7 +156,7 @@
       <div class="timeline-article">
         <div class="content-left-container fade-in-left">
           <div class="content-left" id="content-img">
-            <p><span class="article-number"></span></p><img class="img-summerdx" src="../img/LINE_ALBUM_220904_2.jpg" alt="">
+            <p><span class="article-number"></span></p><a href="https://line.me/ti/g/c0RFRJmXk6"><img class="img-summerdx" src="../img/LINE_ALBUM_220904_2.jpg" alt=""></a>
           </div>
           <span class="timeline-author">
             <input type="checkbox" id="like"><label for="like"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg></label>
