--- a/assets/birthday/index.html
+++ b/assets/birthday/index.html
@@ -225,7 +225,7 @@
           <ul class="birthday-set">
 
             
-            <div class="hidden-box">
+            <div class="hidden-box right-side">
               <input type="checkbox" id="label2"/>
               <div class="hidden-show">
                 <div class="background-birth">
@@ -245,7 +245,7 @@
                 </label>
             </div>
 
-            <div class="hidden-box">
+            <div class="hidden-box right-side">
               <input type="checkbox" id="label4"/>
               <div class="hidden-show">
                 <div class="background-birth">
@@ -264,7 +264,7 @@
                 </label>
             </div>
 
-           <div class="hidden-box">
+           <div class="hidden-box right-side">
               <input type="checkbox" id="label6"/>
               <div class="hidden-show">
                 <div class="background-birth">
@@ -285,7 +285,7 @@
                 </label>
             </div>
 
-           <div class="hidden-box">
+           <div class="hidden-box right-side">
               <input type="checkbox" id="label8"/>
               <div class="hidden-show">
                 <div class="background-birth">
@@ -304,7 +304,7 @@
                 </label>
             </div>
 
-           <div class="hidden-box">
+           <div class="hidden-box right-side">
               <input type="checkbox" id="label10"/>
               <div class="hidden-show">
                 <div class="background-birth">
@@ -326,7 +326,7 @@
                 </label>
             </div>
 
-           <div class="hidden-box">
+           <div class="hidden-box right-side">
               <input type="checkbox" id="label12"/>
               <div class="hidden-show">
                 <div class="background-birth">
@@ -355,16 +355,16 @@
          <h2 id="youhei-tanaka">田中 陽平</h2>
 
 
-      <div class="main-below-below">
+    <div class="main-below-below">
       <figure><img class="birthday-cards" src="../img/youhei-tanaka-birthday.jpeg" alt=""></figure>
-      <div main-below-text>陽平へ
+      <div class = "main-below-text">陽平へ
         少し早いけど誕生日おめでとう！
         前回のハッカソンフェスでは陽平と同じチームになって、一緒にコード書いたり喋ったりできて嬉しかった！それまで陽平とはちゃんと話したことなくて、僕に興味ないからかなと思ってたんだけど、実際に話してみると傾聴はするし賢いし面白い人だったね。ハッカソン中に2人で銭湯に行った時も歩きながら制作物のことを考えていて、そうした熱心に取り組んでいる姿も素敵だったよ。素敵なのはそれだけではなく、ゴルフ、サッカー、釣りなど趣味が多岐に渡っていること、POSSE以外にもゼミやインターンなどいろんなことに取り組んでいることも挙げられます。そんな多才な陽平だけど、言葉遣いが巧みで一部の女子が虜になってるみたいなので、まだ話したことない女子はぜひ彼に話しかけてみましょう。ところで最近ハワイに行ってきたようだけど、ストーリーがゴルフ場とカメレオンだったので、美味しかったものや他に行って楽しかったところがあれば教えてください。あと今年の抱負も聞きたいです。
         長くなったけどこの1年が、陽平が幸せになってその幸せが周りに良い影響を与えるような1年になることを願っております！誕生日おめでとう！
-        </div>
-      </div>
       </div>
     </div>
+  </div>
+</div>
 
     </div>
     </article>
